# KKEduLabs

./: .gitignore  README.md  enterprise_rag.py  pyproject.toml  requirements.txt  settings.json  velammal-dataset-1.txt
kkedu_rag/: __init__.py  __main__.py
kkedu_rag/agents/: __init__.py  answerer.py  registry.py  wiring.py
kkedu_rag/cli/: __init__.py  repl.py
kkedu_rag/core/: __init__.py  config.py  prompts.py  rbac.py  sanitize.py  security.py  settings.py
kkedu_rag/llm/: __init__.py  factory.py
kkedu_rag/memory/: __init__.py  session.py
kkedu_rag/retrieval/: __init__.py  indexing.py  manage.py  overview.py  scope.py  store.py
kkedu_rag/runtime/: __init__.py  startup.py
kkedu_rag/services/: __init__.py  evidence.py  ingestion.py  pipeline.py
kkedu_rag/storage/: __init__.py  conversations.py  db.py  documents.py  users.py
kkedu_rag/verification/: __init__.py  guards.py  schema.py
kkedu_rag/web/: __init__.py  __main__.py  app.py  auth.py  documents.py  routes.py  settings_routes.py  streaming.py  users_routes.py
kkedu_rag/web/static/: app.js  index.html  styles.css
