[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kkedu-rag"
version = "1.0.0"
description = "Enterprise RAG CLI — grounded Q&A over plain-text docs with a verifier agent and conversation memory (OpenAI Agents SDK + Ollama gpt-oss)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "openai-agents>=0.17",
    "openai>=2.0",
    "numpy>=2.0",
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "sse-starlette>=2.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
kkedu-rag = "kkedu_rag.cli.repl:run"
kkedu-rag-web = "kkedu_rag.web.app:run"

[tool.setuptools.packages.find]
include = ["kkedu_rag*"]
